--- a/Airbnb/Airbnb-main/airbnb.css
+++ b/Airbnb/Airbnb-main/airbnb.css
@@ -24,17 +24,35 @@ main {
 .box-title--btns{
     display: flex;
 }
+
 .box-title--btn{
     display: flex;
     align-items: center; 
     margin-left: 5px;
 }
+
+.box-title--btn1{
+    display: flex;
+    align-items: center;
+    left: 15%;
+    position: relative;
+}
+
+.box-title--btn1 a{
+    margin-left: 6px; 
+    font-size: 1rem;
+    color:#222;
+
+}
+
 .box-title--btn a{
     margin-left: 6px; 
     font-size: 1rem;
     color:#222;
-    text-decoration: none;
 }
+
+
+
 .gallery{
     display: grid;
     grid-template-rows: 180px 180px;
@@ -75,9 +93,9 @@ main {
     height: auto;
 }
 .block {
-    border-radius: 20px;
+    border-radius: 5px;
     padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 7px #aaa;
     float: right; 
 }
 
@@ -87,10 +105,10 @@ main {
 }
 
 .block-a {
-    height: 400px;
+    height: 500px;
     margin-bottom: 10px;
     background: transparent;
-    width: 280px;
+    width: 350px;
 }
 .block-a li{
     list-style: none;
@@ -105,30 +123,165 @@ main {
 .block-b{
     height: 60px;
     margin-top: 25px;
-    width: 230px;
+    width: 100%;
+    left: 29px;
+    position: relative;
     border-radius: 10px;
     padding: 25px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    display: block;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
     display: grid;
-    grid-template-columns: repeat(2,53%);
-    grid-template-rows: repeat(2,40px);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2,50px);
     align-content: center;
     font-size: 14px;
 }
 
-.block-b .hospedes{
-    grid-row-end: -1;
-    grid-column-start:1 ;
-    grid-column-end: -1;
-    margin-top: 2px;
+.block-b div.hospedes{
+    display: grid;
+    width: 100%;
+    border: 1px solid #b9b9b9;
+    width: auto;
     /*align-self: center;*/
+    grid-column: 1/3;
+    grid-row: 2;
+    border-radius: 0px 0px 10px 10px;
+    align-items: center;
+    
+}
+
+.block-b div p{
+    margin-left: 10px;
+}
+
+.block-b div.check-in{
+    border: 1px solid #b9b9b9;
+    border-radius: 10px 0px 0px 0px;
+    align-items: center;
+    
+}
+
+.block-b div.check-in p{
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+.block-b div.checkout p{
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+.block-b div.hospedes p{
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+.block-b div.grid-precos{
+    display: grid;
+    position: relative;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 39% 39% 39% 10% 39%;
+    top: 110px;
+    color: #646464;
+}
+
+.block-b div.grid-precos .item-1 {
+    align-self: center;
+}
+
+.block-b div.grid-precos .item-2 {
+    align-self: center;
+    grid-row: 3;
+}
+
+.block-b div.grid-precos .item-3 {
+    align-self: center;
+    grid-row: 2;
+}
+
+.block-b div.grid-precos .item-3 {
+    align-self: center;
+    grid-row: 2;
+}
+
+.block-b div.grid-precos a{
+    color: #646464;
+}
+
+.block-b div.grid-precos .item-4 {
+    align-self: center;
+    grid-column: 1/3;
+    grid-row: 4;
+    height: 2px;
+    color: #f1f1f1;
+}
+
+.block-b div.grid-precos .item-5 {
+    align-self: center;
+    grid-row: 5;
+    font-weight: bold;
+}
+
+.block-b div.grid-precos .item-6 {
+    align-self: center;
+    grid-row: 1;
+    grid-column: 2;
+    align-self: right;
+    justify-self: right;
+}
+
+.block-b div.grid-precos .item-7 {
+    align-self: center;
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: right;
+}
+
+.block-b div.grid-precos .item-8 {
+    align-self: center;
+    grid-column: 2;
+    justify-self: right;
+}
+
+.block-b div.grid-precos .item-9 {
+    align-self: center;
+    grid-column: 2;
+    grid-row: 5;
+    justify-self: right;
+    font-weight: bold;
+}
+
+
+
+.block-b div.grid-precos .item-5 hr{
+    opacity: 30%;
+}
+
+
+
+.block-b div.hospedes p.nao-sera-cobrado{
+    display: flex;
+    justify-content: center;
+    top: 96px;
+    position: relative;
+    color: #ababab;
+    font-weight: 400;
+
+}
+
+
+
+
+.block-b div.checkout{
+    border: 1px solid #b9b9b9;
+    border-radius: 0px 10px 0px 0px;
+    align-items: center;
 }
 
 .block .span-hospedes{
     margin-top:0;
     display: grid;
     color: rgb(95, 95, 95);
+    border: thin;
 }
 
 .block .span-hospedes{
@@ -139,6 +292,7 @@ main {
 
 .description{
     margin-top: 13px;
+
 }
 .description-casa { 
     width: 26%;
@@ -152,17 +306,30 @@ main {
     padding: 10px;
     margin-top: 30px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px;
+    grid-template-columns: 10px 1fr 10px  1fr 1fr;
+    grid-template-rows: 70px;
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 10px;
+    justify-content: center;
+    bottom: 10px;
+    position: relative;
 }
+
+.grid-container .svg-grecia-esquerdo{
+    grid-row: 1/2;
+}
+
+.grid-container .svg-grecia-direito{
+    grid-row: 2/3;
+}
+
+
+
 .grid-item{
-    background-color: '';
-    padding: 20px;
     text-align: center;
     font-size: 19px;
+    justify-self: center;
     
 }
 
@@ -235,6 +402,129 @@ main {
     margin-left: 10px;
 
 }
-.reserva{
-justify-content: center;
+div.btn button.reserva{
+    float: right;
+    position: relative;
+    right: -372px;
+    bottom: -224px;
+    width: 352px;
+    height: 46px;
+    border-radius: 8px;
+    background-color: #E31C5F;
+    font-size: 18px;
+    color: white;
+    border: thin;
 }
+
+.grid-central{
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 1px 20px 200px;
+    margin-top: 18%;
+    gap: 18px;
+    margin-bottom: 20px;
+}
+
+
+
+.grid-central .div-quarto-1{
+    grid-column: 1;
+    grid-row: 3;
+    border: 1px solid #d3d3d3;
+    border-radius: 20px;
+    bottom: 20px;
+}
+
+.grid-central .hr-quartos{
+    grid-row: 1;
+    grid-column: 1/4;
+    opacity: 40%;
+    gap: 10px
+}
+
+.grid-central .div-quarto-2{
+    grid-column: 2;
+    grid-row: 3;
+    border: 1px solid #d3d3d3;
+    border-radius: 20px;
+}
+
+.grid-central .div-quarto-3{
+    grid-column: 3;
+    grid-row: 3;
+    border: 1px solid #d3d3d3;
+    border-radius: 20px;
+}
+
+.grid-central .div-quarto-1 .quarto-1{
+    display: flex;
+    gap:8px;
+    margin-bottom: 18px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-2 .quarto-2{
+    display: flex;
+    gap:8px;
+    margin-bottom: 18px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-3 .quarto-3{
+    margin-bottom: 18px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-1 .title-quarto-1{
+    font-weight: 600;
+    margin-bottom: 9px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-2 .title-quarto-2{
+    font-weight: 600;
+    margin-bottom: 9px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-3 .title-quarto-3{
+    font-weight: 600;
+    margin-bottom: 9px;
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+}
+
+.grid-central .div-quarto-1 .desc-1{
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+    color: #707070;
+}
+
+.grid-central .div-quarto-2 .desc-2{
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+    color: #707070;
+}
+
+.grid-central .div-quarto-3 .desc-3{
+    top: 19px;
+    position: relative;
+    margin-left: 18px;
+    color: #707070;
+}
+
+
+
